--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -13,7 +13,7 @@ body {
   margin: 0;
   padding: 0;
   overflow: hidden;
-  position: fixed; /* Prevents bounce scroll on iOS */
+  overscroll-behavior: none; /* Prevents bounce scroll */
 }
 
 body {
